embeded tiktok performance videos, fixed white space bug on header and footer.

--- a/src/style.css
+++ b/src/style.css
@@ -10,9 +10,16 @@
   margin: 0 auto;
 }
 
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
 body {
   background: radial-gradient(circle at 52.1% -29.6%, rgb(144, 17, 105) 0%, rgb(51, 0, 131) 100.2%);
   background-repeat: no-repeat;
+  background-size: cover;
   height: 100%;
   width: 100%;
 }
@@ -21,7 +28,7 @@ header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
     url(../imgs/signal-2025-06-02-00-05-34-536.jpg);
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 100%;
   color: white;
   text-align: center;
   padding: 160px 0;
@@ -112,9 +119,28 @@ main p {
 }
 
 section {
-  max-width: 900px;
   margin: 0 auto;
-  padding: 100px;
+  padding: 100px 20px;
+}
+
+.secondary {
+  width: 100%;
+  background-color: #f8f8f8;
+  text-align: center;
+}
+
+.tiktok-cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px;
+  margin: 20px;
+}
+
+.tiktok-embed {
+  background-color: #f8f8f8 !important;
+  margin: 0 auto !important;
+  box-shadow: none !important;
+  border: none !important;
 }
 
 .footer-container {
@@ -184,6 +210,10 @@ footer a {
   }
   section {
     padding: 40px 20px;
+  }
+
+.tiktok-grid {
+    grid-template-columns: auto auto;
   }
   main img {
     max-width: 100%;
